Update cabin page.

--- a/cabin.html
+++ b/cabin.html
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        TrasHumantes
+                        Tras-Humantes
                     </a>
                 </li>
                 <li>
@@ -65,186 +65,144 @@
                 </div>
               </div>
             </div>
-            <div class="row panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingCollection1997">
-                  <h4 class="panel-title">
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection1997" aria-expanded="true" aria-controls="collapseCollection1997">
-                      Primer piso
-                    </a>
-                  </h4>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>UBICACIÓN<br/>Manizales, Caldas, Colombia</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin01_UbicacionManizalesCaldasColombia.png" alt="manizales caldas colombia" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>Manizales, barrio La Francia<br/>Sector Morrogacho</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin02_UbicacionBarrioFranciaSectorMorrogacho.png" alt="barrio la francia sector morrogacho" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>Ubicación Cabaña Trashumantes</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin03_UbicacionCabana.png" alt="ubicacion cabana trashumantes" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>ACCESO</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin04_Acceso.jpg" alt="acceso" class="img-responsive" />
+                <h4>
+                  <ul>
+                    <li>Ruta transporte público ruta La Francia-Morrogacho.</li>
+                    <li>Caminata de 10 minutos paradero busetas de Morrogacho hacia el Seminario Villa Jordán</li>
+                  </ul>
+                </h4>
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>CABAÑA - FACHADA</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin05_CabanaFachada.jpg" alt="cabana fachada" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>ENTRADA PRINCIPAL</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin06_EntradaPrincipal1.png" alt="entrada principal 1" class="img-responsive col-lg-6" />
+                <img src="./img/cabana/TrasHumantes_Cabin07_EntradaPrincipal2.png" alt="entrada principal 2" class="img-responsive col-lg-6" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>DORMITORIO PRIMER PISO</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin08_DormitorioPrimerPiso.png" alt="dormitorio primer piso" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>DORMITORIO SEGUNDO PISO</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin09_DormitorioSegundoPiso.png" alt="dormitorio segundo piso" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>DORMITORIO BUHARDILLA</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin10_DormitorioBuhardilla.png" alt="dormitorio buhardilla" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>Barra para comidas</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin11_BarraComidas.jpg" alt="barra para comidas" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>Salón de descanso</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin12_SalonDescanso.png" alt="salon de descanso" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>Balcones</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin13_Balcones.png" alt="balcones" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>COCINA</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin14_Cocina.png" alt="cocina" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>HORNOS Y ESTUFAS PARA LEÑA</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin15_HornosEstufasLena.png" alt="hornos estufas lena" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>BAÑO</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin16_Bano1.png" alt="bano 1" class="img-responsive col-lg-6" />
+                <img src="./img/cabana/TrasHumantes_Cabin17_Bano2.png" alt="bano 2" class="img-responsive col-lg-6" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>Comedor comunitario y área de ropas</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin18_ComedorComunitarioAreaRopas.png" alt="comedor comunitario area ropas" class="img-responsive" />
+              </div>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>ANFITRIONES</h2>
+                <div class="col-lg-6">
+                  <img src="./img/cabana/TrasHumantes_Cabin19_Anfitriones1.png" alt="anfitriones 1" class="img-responsive" />
+                  <p>
+                    MARITZA ARANGO ZAPATA<br/>
+                    Antropóloga - Magister en desarrollo regional y planificación del territorio<br/>
+                    Tel: 3147698201
+                  </p>
                 </div>
-                <div id="collapseCollection1997" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection1997">
-                  <div class="panel-body">
-                    <h3>Ante-sala:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0005_Piso1Antesala.jpg" alt="Piso1 Antesala">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Alcoba:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0002_Piso1Alcoba1.jpg" alt="Piso1 Alcoba1">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0015_Piso1Alcoba2.jpg" alt="Piso1 Alcoba2">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Baño:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0009_Piso1Bano1Entrada.jpg" alt="Piso1 Bano1Entrada">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0004_Piso1Bano2Ducha.jpg" alt="Piso1 Bano2Ducha">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Cocina:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0012_Piso1Cocina1.jpg" alt="Piso1 Cocina1">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181210-WA0025_Piso1Cocina2Mesa.jpg" alt="Piso1 Cocina2Mesa">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Sala principal:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0011_Piso1SalaPrincipal1.jpg" alt="Piso1 SalaPrincipal1">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181210-WA0024_Piso1SalaPrincipal2.jpg" alt="Piso1 SalaPrincipal2">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Balcón:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0003_Piso1Balcon1.jpg" alt="Piso1 Balcon1">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Horno y Zona de Ropas:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso1/IMG-20181209-WA0007_Piso1HornoRopas.jpg" alt="Piso1 HornoRopas">
-                        </a>
-                      </div>
-                    </div>
-                  </div>
+                <div class="col-lg-6">
+                  <img src="./img/cabana/TrasHumantes_Cabin20_Anfitriones2.png" alt="anfitriones 2" class="img-responsive" />
+                  <p>
+                    DANIEL BENÍTEZ RESTREPO<br/>
+                    Ingeniero de Sistemas y Computación - Desarrollador<br/>
+                    Tel: 3007982690
+                  </p>
                 </div>
               </div>
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingCollection1999">
-                  <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection1999" aria-expanded="false" aria-controls="collapseCollection1999">
-                      Segundo piso
-                    </a>
-                  </h4>
+            </div>
+            <div class="row panel panel-default">
+              <div class="col-lg-12 panel-body">
+                <h2>RESERVACIONES</h2>
+                <div class="col-lg-6">
+                  <h2>
+                    <ul>
+                      <li>WhatsApp: 3147698201</li>
+                      <li>E-Mail: arangoz06@yahoo.es</li>
+                    </ul>
+                  </h2>
                 </div>
-                <div id="collapseCollection1999" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection1999">
-                  <div class="panel-body">
-                    <h3>Sala de entretenimiento:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-12">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso2/IMG-20181209-WA0006.jpg" alt="Piso2 SalaEntretenimiento">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Hamacas y Sala de estar:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso2/IMG-20181209-WA0008.jpg" alt="Piso2 HamacasSalaEstar1">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso2/IMG-20181209-WA0019.jpg" alt="Piso2 HamacasSalaEstar2">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Habitación:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso2/IMG-20181209-WA0001.jpg" alt="Piso2 Habitacion1">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso2/IMG-20181209-WA0024.jpg" alt="Piso2 Habitacion2">
-                        </a>
-                      </div>
-                    </div>
-                    <h3>Balcón:</h3>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-12">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso2/IMG-20181209-WA0010.jpg" alt="Piso2 Balcon1">
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="headingCollection2009">
-                  <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection2009" aria-expanded="false" aria-controls="collapseCollection2009">
-                      Tercer piso
-                    </a>
-                  </h4>
-                </div>
-                <div id="collapseCollection2009" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2009">
-                  <div class="panel-body">
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso3/IMG-20181209-WA0020_Piso31.jpg" alt="Piso3 1">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso3/IMG-20181209-WA0016_Piso32.jpg" alt="Piso3 2">
-                        </a>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso3/IMG-20181209-WA0022_Piso33.jpg" alt="Piso3 3">
-                        </a>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <a href="#" class="thumbnail">
-                          <img src="./img/cabana/piso3/IMG-20181209-WA0021_Piso34.jpg" alt="Piso3 4">
-                        </a>
-                      </div>
-                    </div>
-                  </div>
+                <div class="col-lg-6">
+                  <img src="./img/cabana/TrasHumantes_Cabin21_Reservaciones.png" alt="reservaciones" class="img-responsive" />
                 </div>
               </div>
             </div>
