--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="tras-humantes.net">
     <meta name="author" content="tras-humantes.net">
 
-    <title>. : : Espacio Sideral : : .</title>
+    <title>. : : Tras-Humantes : : .</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,15 +35,18 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        Espacio Sideral
+                        Tras-Humantes
                     </a>
                 </li>
                 <li>
-                    <a href="./retazos.html">Retazos</a>
+                    <a href="./cabin.html">Cabaña</a>
                 </li>
                 <li>
                     <a href="./jardines.html">Mini-Jardines</a>
                 </li>
+                <li>
+                        <a href="./retazos.html">Retazos</a>
+                    </li>
                 <li>
                     <a href="./contact.html">Contacto</a>
                 </li>
