--- a/retazos.html
+++ b/retazos.html
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        TrasHumantes
+                        Tras-Humantes
                     </a>
                 </li>
                 <li>
