Add taxes info on cabin page.

--- a/cabin.html
+++ b/cabin.html
@@ -192,14 +192,17 @@
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
-                <h2>RESERVACIONES</h2>
+                <h2>RESERVACIONES y TARIFAS</h2>
                 <div class="col-lg-6">
-                  <h2>
+                  <h3>
                     <ul>
+                      <li>Habitación una noche: 30.000 COP</li>
+                      <li>Cargo por invitado adicional para habitación: 10.000 COP</li>
+                      <li>Disponibilidad de café y acceso a cocina</li>
                       <li>WhatsApp: 3147698201</li>
-                      <li>E-Mail: arangoz06@yahoo.es</li>
+                      <li>E-Mail: trashumantes.18@gmail.com</li>
                     </ul>
-                  </h2>
+                  </h3>
                 </div>
                 <div class="col-lg-6">
                   <img src="./img/cabana/TrasHumantes_Cabin21_Reservaciones.png" alt="reservaciones" class="img-responsive" />
