--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
               <h1>Contacto</h1>
             </div>
             <div class="row text-center">
-              <h3><a href="mailto:arangoz06@yahoo.es?subject=Acerca%20de%20retazos" target="_blank">arangoz06@yahoo.es</a></h3>
+              <h3><a href="mailto:trashumantes.18@gmail.com?subject=Acerca%20de%20Tras-Humantes" target="_blank">trashumantes.18@gmail.com</a></h3>
               <h2>Pedidos: <a href="whatsapp://send?text=Acerca%20de%20retazos" data-action="share/whatsapp/share">+57 3147698201</a></h2>
               <h3><a href="https://www.google.com.co/maps/@5.0559722,-75.4936265,15z" target="_blank">Manizales</a></h3>
             </div>
