Update content and photos for cabin page.

--- a/cabin.html
+++ b/cabin.html
@@ -9,7 +9,7 @@
     <meta name="description" content="tras-humantes.net">
     <meta name="author" content="tras-humantes.net">
 
-    <title>. : : Tras-Humantes : : .</title>
+    <title>. : : Trashumantes : : .</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        Tras-Humantes
+                        Trashumantes
                     </a>
                 </li>
                 <li>
@@ -68,112 +68,81 @@
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>UBICACIÓN<br/>Manizales, Caldas, Colombia</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin01_UbicacionManizalesCaldasColombia.png" alt="manizales caldas colombia" class="img-responsive" />
-              </div>
-            </div>
-            <div class="row panel panel-default">
-              <div class="col-lg-12 panel-body">
-                <h2>Manizales, barrio La Francia<br/>Sector Morrogacho</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin02_UbicacionBarrioFranciaSectorMorrogacho.png" alt="barrio la francia sector morrogacho" class="img-responsive" />
-              </div>
-            </div>
-            <div class="row panel panel-default">
-              <div class="col-lg-12 panel-body">
-                <h2>Ubicación Cabaña Trashumantes</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin03_UbicacionCabana.png" alt="ubicacion cabana trashumantes" class="img-responsive" />
-              </div>
-            </div>
-            <div class="row panel panel-default">
-              <div class="col-lg-12 panel-body">
-                <h2>ACCESO</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin04_Acceso.jpg" alt="acceso" class="img-responsive" />
-                <h4>
-                  <ul>
-                    <li>Ruta transporte público ruta La Francia-Morrogacho.</li>
-                    <li>Caminata de 10 minutos paradero busetas de Morrogacho hacia el Seminario Villa Jordán</li>
-                  </ul>
-                </h4>
-              </div>
-            </div>
-            <div class="row panel panel-default">
-              <div class="col-lg-12 panel-body">
-                <h2>CABAÑA - FACHADA</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin05_CabanaFachada.jpg" alt="cabana fachada" class="img-responsive" />
+                <img src="./img/cabana/TrasHumantes_Cabin01_UbicacionManizalesCaldasColombia.jpg" alt="manizales caldas colombia" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>ENTRADA PRINCIPAL</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin06_EntradaPrincipal1.png" alt="entrada principal 1" class="img-responsive col-lg-6" />
-                <img src="./img/cabana/TrasHumantes_Cabin07_EntradaPrincipal2.png" alt="entrada principal 2" class="img-responsive col-lg-6" />
+                <img src="./img/cabana/CabanaEntradaPrincipal1.jpg" alt="entrada principal 2" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>DORMITORIO PRIMER PISO</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin08_DormitorioPrimerPiso.png" alt="dormitorio primer piso" class="img-responsive" />
+                <img src="./img/cabana/TrasHumantes_Cabin08_DormitorioPrimerPiso.jpg" alt="dormitorio primer piso" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>DORMITORIO SEGUNDO PISO</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin09_DormitorioSegundoPiso.png" alt="dormitorio segundo piso" class="img-responsive" />
+                <img src="./img/cabana/TrasHumantes_Cabin09_DormitorioSegundoPiso.jpg" alt="dormitorio segundo piso" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>DORMITORIO BUHARDILLA</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin10_DormitorioBuhardilla.png" alt="dormitorio buhardilla" class="img-responsive" />
+                <img src="./img/cabana/CabanaDormitorioBuhardilla1.jpg" alt="dormitorio buhardilla" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
-                <h2>Barra para comidas</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin11_BarraComidas.jpg" alt="barra para comidas" class="img-responsive" />
+                <h2>Sala</h2>
+                <img src="./img/cabana/CabanaSalita1.jpg" alt="barra para comidas" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
-                <h2>Salón de descanso</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin12_SalonDescanso.png" alt="salon de descanso" class="img-responsive" />
+                <h2>Salón de descanso y salón social</h2>
+                <img src="./img/cabana/TrasHumantes_Cabin12_SalonDescanso.jpg" alt="salon de descanso" class="img-responsive col-lg-6" />
+                <img src="./img/cabana/CabanaSalonSocial1.jpg" alt="salon social" class="img-responsive col-lg-6" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>Balcones</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin13_Balcones.png" alt="balcones" class="img-responsive" />
+                <img src="./img/cabana/CabanaBalcones1.jpg" alt="balcones" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>COCINA</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin14_Cocina.png" alt="cocina" class="img-responsive" />
+                <img src="./img/cabana/CabanaCocina1.jpg" alt="cocina" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>HORNOS Y ESTUFAS PARA LEÑA</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin15_HornosEstufasLena.png" alt="hornos estufas lena" class="img-responsive" />
+                <img src="./img/cabana/CabanaEstufaLena1.jpg" alt="hornos estufas lena" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>BAÑO</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin16_Bano1.png" alt="bano 1" class="img-responsive col-lg-6" />
-                <img src="./img/cabana/TrasHumantes_Cabin17_Bano2.png" alt="bano 2" class="img-responsive col-lg-6" />
+                <img src="./img/cabana/TrasHumantes_Cabin16_Bano1.jpg" alt="bano 1" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>Comedor comunitario y área de ropas</h2>
-                <img src="./img/cabana/TrasHumantes_Cabin18_ComedorComunitarioAreaRopas.png" alt="comedor comunitario area ropas" class="img-responsive" />
+                <img src="./img/cabana/CabanaComedorSocial1.jpg" alt="comedor comunitario area ropas" class="img-responsive" />
               </div>
             </div>
             <div class="row panel panel-default">
               <div class="col-lg-12 panel-body">
                 <h2>ANFITRIONES</h2>
                 <div class="col-lg-6">
-                  <img src="./img/cabana/TrasHumantes_Cabin19_Anfitriones1.png" alt="anfitriones 1" class="img-responsive" />
+                  <img src="./img/cabana/TrasHumantes_Cabin19_Anfitriones1.jpg" alt="anfitriones 1" class="img-responsive" />
                   <p>
                     MARITZA ARANGO ZAPATA<br/>
                     Antropóloga - Magister en desarrollo regional y planificación del territorio<br/>
@@ -181,7 +150,7 @@
                   </p>
                 </div>
                 <div class="col-lg-6">
-                  <img src="./img/cabana/TrasHumantes_Cabin20_Anfitriones2.png" alt="anfitriones 2" class="img-responsive" />
+                  <img src="./img/cabana/TrasHumantes_Cabin20_Anfitriones2.jpg" alt="anfitriones 2" class="img-responsive" />
                   <p>
                     DANIEL BENÍTEZ RESTREPO<br/>
                     Ingeniero de Sistemas y Computación - Desarrollador<br/>
@@ -197,7 +166,7 @@
                   <h3>
                     <ul>
                       <li>Habitación una noche: 30.000 COP</li>
-                      <li>Cargo por invitado adicional para habitación: 10.000 COP</li>
+                      <li>Cargo por invitado adicional para habitación: 20.000 COP</li>
                       <li>Disponibilidad de café y acceso a cocina</li>
                       <li>WhatsApp: 3147698201</li>
                       <li>E-Mail: trashumantes.18@gmail.com</li>
@@ -205,7 +174,7 @@
                   </h3>
                 </div>
                 <div class="col-lg-6">
-                  <img src="./img/cabana/TrasHumantes_Cabin21_Reservaciones.png" alt="reservaciones" class="img-responsive" />
+                  <img src="./img/cabana/TrasHumantes_Cabin21_Reservaciones.jpg" alt="reservaciones" class="img-responsive" />
                 </div>
               </div>
             </div>
