--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="tras-humantes.net">
     <meta name="author" content="tras-humantes.net">
 
-    <title>. : : Tras-Humantes : : .</title>
+    <title>. : : Trashumantes : : .</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        Tras-Humantes
+                        Trashumantes
                     </a>
                 </li>
                 <li>
@@ -58,8 +58,8 @@
         <div id="page-content-wrapper">
           <div class="container-fluid">
             <div class="page-header">
-              <h1 class="text-center">TRAS-HUMANTES</h1>
-              <img src="./img/cabana/IMG-20181210-WA0013.jpg" alt="trashumantes 1" class="img-responsive center-block" />
+              <h1 class="text-center">Trashumantes</h1>
+              <img src="./img/cabana/IndexPanoramica2.jpeg" alt="trashumantes 1" class="img-responsive center-block" />
             </div>
             <div class="row">
               <div class="col-xs-6 col-md-3">
