--- a/jardines.html
+++ b/jardines.html
@@ -27,7 +27,7 @@ class: center,middle
 background-color: #000000
 
 .right[[&lt;&lt; volver](/)]
-# VIVERO TRASHUMANTES
+# VIVERO Trashumantes
 .thumbnail[![vivero 01](img/vivero01.jpg "vivero 01")]
 ---
 
