--- a/retazos.html
+++ b/retazos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="tras-humantes.net">
     <meta name="author" content="tras-humantes.net">
 
-    <title>. : : Tras-Humantes : : .</title>
+    <title>. : : Trashumantes : : .</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="./index.html">
-                        Tras-Humantes
+                        Trashumantes
                     </a>
                 </li>
                 <li>
