Add collection 2019 to retazos.

--- a/retazos.html
+++ b/retazos.html
@@ -59,9 +59,11 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                <div class="jumbotron">
+                <!-- <div class="jumbotron"> -->
+                <div class="jumbotron" style="background-image: url('./img/retazos1.jpg'); background-size: 300px 140px; background-repeat: no-repeat; background-position: top right;">
                   <h1>RETAZOS <small><a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="glyphicon glyphicon-menu-hamburger"></i></a></small></h1>
-                  <!-- <img src="./img/logo_01.jpg" alt="logo" class="img-responsive" /> -->
+                  <!-- <img src="./img/retazos1.jpg" alt="logo" class="img-responsive" /> -->
+                  <p>Empresa de economía circular, ubicada en el sector textil.<br/>Consiste en reciclar retazos dejados por la industria textil mecánica o artesanal con el fin de elaborar prendas de uso cotidiano.</p>
                 </div>
               </div>
             </div>
@@ -313,6 +315,149 @@
                         <a href="#" class="thumbnail">
                           <img src="./img/collection2016_maleta2.jpg" alt="collection2016_maleta2">
                         </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingCollection2019">
+                  <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseCollection2019" aria-expanded="true" aria-controls="collapseCollection2019">
+                      Colección 2019
+                    </a>
+                  </h4>
+                </div>
+                <div id="collapseCollection2019" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingCollection2019">
+                  <div class="panel-body">
+                    <h2>Proceso de elaboración</h2>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-12">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_procesoelaboracion.jpg" alt="collection2019_procesoelaboracion">
+                        </a>
+                      </div>
+                    </div>
+                    <h2>Proceso de diseño</h2>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <div>
+                          <a href="#" class="thumbnail">
+                            <img src="./img/collection2019_procesodisenio1.jpg" alt="collection2019_procesodisenio1">
+                          </a>
+                        </div>
+                        <div>
+                          <a href="#" class="thumbnail">
+                            <img src="./img/collection2019_procesodisenio2.jpg" alt="collection2019_procesodisenio2">
+                          </a>
+                        </div>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_procesodisenio3.jpg" alt="collection2019_procesodisenio3">
+                        </a>
+                      </div>
+                    </div>
+                    <h2>DELANTALES PARA MUJER:</h2>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-3">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantalesmujer1.jpg" alt="collection2019_delantalesmujer1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-3">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantalesmujer2.jpg" alt="collection2019_delantalesmujer2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-3">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantalesmujer3.jpg" alt="collection2019_delantalesmujer3">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-3">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantalesmujer4.jpg" alt="collection2019_delantalesmujer4">
+                        </a>
+                      </div>
+                    </div>
+                    <h2>DELANTALES PARA HOMBRE:</h2>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-3">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantaleshombre1.jpg" alt="collection2019_delantaleshombre1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-3">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantaleshombre2.jpg" alt="collection2019_delantaleshombre2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-3">
+                        <h3>Delantales jóvenes: Diseñados para actividades varias.</h3>
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantalesjovenes1.jpg" alt="collection2019_delantalesjovenes1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-3">
+                        <h3>Delantales hombre: Para actividades  de mecánica, limpieza de bicicletas, motos, carros.</h3>
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_delantaleshombre3.jpg" alt="collection2019_delantaleshombre3">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <h3>BOLSO UNISEX</h3>
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_bolsounisex.jpg" alt="collection2019_bolsounisex">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <h3>BOLSO MUJER</h3>
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_bolsomujer.jpg" alt="collection2019_bolsomujer">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-6">
+                        <h3>PORTAHERRAMIENTAS (Para mecánica de bicicleta)</h3>
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_portaherramientas.jpg" alt="collection2019_portaherramientas">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-6">
+                        <h3>LLAVEROS (Para cargar llaves en el cuello  o en el bolsillo)</h3>
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_llavero.jpg" alt="collection2019_llavero">
+                        </a>
+                      </div>
+                    </div>
+                    <h2>FALDAS (Diseñadas a partir de pantalones desechados por  mal estado, tallas pequeñas o talles bajos):</h2>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_falda1.jpg" alt="collection2019_falda1">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_falda2.jpg" alt="collection2019_falda2">
+                        </a>
+                      </div>
+                      <div class="col-xs-12 col-md-4">
+                        <a href="#" class="thumbnail">
+                          <img src="./img/collection2019_falda3.jpg" alt="collection2019_falda3">
+                        </a>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-xs-12 col-md-12">
+                        <h2>CONTACTO</h2>
+                        <p>Correo electrónico: <a href="mailto:mar.arango.z@gmail.com">mar.arango.z@gmail.com</a></p>
+                        <p>Whatsapp: (+57) 3147698201</p>
+                        <p>Manizales, Caldas, Colombia</p>
                       </div>
                     </div>
                   </div>
