--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <div class="caption">
                     <h3>retazos</h3>
                   </div>
-                  <img src="./img/retazos.jpg" alt="retazos" class="img-responsive" />
+                  <img src="./img/retazos1.jpg" alt="retazos" class="img-responsive" />
                 </a>
               </div>
             </div>
